90% width on input-error-message to prevent the validation message appearing offscreen on sliding login panel.

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -227,7 +227,7 @@
 .uikit-refactor .header-version-message{background-color:#000;color:#fff;line-height:1.2;padding:.5em 0;margin:0}
 .uikit-refactor .header-version-message p{margin:0}.uikit-refactor .header-version-message a{color:#fff !important;padding:2px}
 .uikit-refactor .header-version-message a:hover,.uikit-refactor .header-version-message a:focus{background-color:#1057a7 !important;text-decoration:none}
-.uikit-refactor .has-error{border-left:1px solid #c00;padding-left:1em}.uikit-refactor .has-error .input-error-message{background:transparent url(../images/ico-error.svg) no-repeat 0 3px;background-size:20px 20px;padding:0 0 0 24px !important;color:#c00;padding:0;margin:0;width:100%;font-size:1rem;clear:both;display:block}
+.uikit-refactor .has-error{border-left:1px solid #c00;padding-left:1em}.uikit-refactor .has-error .input-error-message{background:transparent url(../images/ico-error.svg) no-repeat 0 3px;background-size:20px 20px;padding:0 0 0 24px !important;color:#c00;margin:0;width:90%;font-size:1rem;clear:both;display:block}
 .uikit-refactor .has-error input[type=text],.uikit-refactor .has-error input[type=date],.uikit-refactor .has-error input[type=tel],.uikit-refactor .has-error input[type=email],.uikit-refactor .has-error input[type=number],.uikit-refactor .has-error input[type=phone],.uikit-refactor .has-error input[type=password],.uikit-refactor .has-error input[type=url],.uikit-refactor .has-error input[type=search],.uikit-refactor .has-error textarea,.uikit-refactor .has-error select{border:1px solid #c00 !important}
 .uikit-refactor .pagination{margin:1em 0 2em 0}.uikit-refactor h1 span{font-size:1.5rem;color:#666}
 .uikit-refactor .uikit-callout{background-color:#e2e2e2;border-radius:6px;padding:1em 2em;margin-bottom:2em}
