--- a/src/sass/myservice-user-feedback.scss
+++ b/src/sass/myservice-user-feedback.scss
@@ -55,9 +55,8 @@
 		background-size: 20px 20px;
 		padding: 0 0 0 24px !important;
 		color: $validation;
-	    padding: 0;
 	    margin: 0;
-	    width: 100%;
+	    width: 90%;
 	    font-size: 1rem;
 	    clear: both;
 	    display: block;
